# biocontext

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
specs/: README.md  api-reference.md  data-model.md  design-rationale.md  glossary.md  observability.md  open-questions.md  testing-strategy.md
specs/adr/: 0001-mcp-server-language.md  0002-ai-provider-interface.md  0010-cli-plugin-model.md  0016-automation-plugin-type.md  0020-plugin-registry.md  0021-time-series-aggregation.md  0022-semver.md  0023-distribution-mechanism.md  README.md
src/biocontext/: __init__.py
src/healthspan/: __init__.py
