[project]
name = "biocontext"
version = "0.1.0.dev0"
description = "Local-first personal health data platform with MCP server for AI-assisted longitudinal analysis"
readme = "README.md"
authors = [
    { name = "Matthew Zaleski", email = "neuroticgamer01@zaleski.net" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
biocontext = "biocontext:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
